content design fine tuning

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -41,7 +41,7 @@
 .fixed-toolbar .site-content {
   padding: 0 0 0 var(--sidebar-width);
   margin: 0;
-  width: 100vw;
+  width: 100%;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -68,7 +68,7 @@
 
     aside.section-nav-container {
       min-width: calc(var(--page-max-width) - var(--sidebar-width) - var(--content-max-width) - (var(--content-padding) * 2) - var(--content-overview-gap));
-      width: calc(100vw - var(--sidebar-width) - var(--content-max-width) - (var(--content-padding) * 2));
+      width: calc(100% - var(--sidebar-width) - var(--content-max-width) - (var(--content-padding) * 2));
       padding: 0 2rem 0 0;
       top: calc(var(--header-height) + 4.5rem);
       right: 0;
@@ -89,7 +89,7 @@
 
       & > ul {
         margin: 0;
-        padding: 0 0 4rem 0;
+        padding: 0;
         list-style: none;
         border-left: 1px solid var(--border-regular);
         
@@ -173,6 +173,7 @@
               display: flex;
               gap: 0.25rem;
               padding: 0;
+              flex-wrap: wrap;
 
               & > li {
                 display: flex;
@@ -182,6 +183,8 @@
                 line-height: var(--body-md-regular-line-height);
                 font-weight: var(--body-md-regular-font-weight);
                 color: var(--text-body);
+                white-space: nowrap;
+                max-width: 100%;
 
                 &::before {
                   display: none;
@@ -207,6 +210,8 @@
                 }
 
                 a {
+                  overflow: hidden;
+                  text-overflow: ellipsis;
                   color: var(--text-link);
                   text-decoration: none;
                   
@@ -237,6 +242,54 @@
 
             & > br {
               display: none;
+            }
+          }
+
+          & > section,
+          & > .footer-content {
+            max-width: var(--content-max-width);
+            margin-right: calc(var(--page-max-width) - var(--sidebar-width) - var(--content-max-width) - (var(--content-padding) * 2) - var(--content-overview-gap));
+          }
+
+          & > .footer-content {
+            margin-top: 1rem;
+            padding: 1rem 0 0 0;
+            border-top: 1px solid var(--border-regular);
+
+            .relationship-toc {
+              display: flex;
+              flex-direction: column;
+              gap: 1rem;
+
+              .relationship-toc-title {
+                font-size: var(--heading-h3-font-size);
+                line-height: var(--heading-h3-line-height);
+                font-weight: var(--heading-h3-font-weight);
+                color: var(--text-primary);
+                margin: 0;
+              }
+
+              ul.related-topics {
+                list-style: none;
+                margin: 0;
+                padding: 0;
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+
+                li > a {
+                  font-size: var(--body-md-regular-font-size);
+                  line-height: var(--body-md-regular-line-height);
+                  font-weight: var(--body-md-regular-font-weight);
+                  color: var(--text-link);
+                  text-decoration: none;
+
+                  &:hover {
+                    color: var(--text-link-hover);
+                    text-decoration: underline;
+                  }
+                }
+              }
             }
           }
 
@@ -539,7 +592,7 @@
 
               h3, .example-title {
                 font-family: var(--base-font-family);
-                margin: 0 0 0.5rem 0;
+                margin: 0;
                 padding: 0;
                 font-size: var(--body-lg-semibold-font-size);
                 line-height: var(--body-lg-semibold-line-height);
@@ -548,20 +601,21 @@
               }
 
               p {
+                margin: 0.5rem 0 0 0;
                 font-size: var(--body-md-regular-font-size);
                 line-height: var(--body-md-regular-line-height);
                 font-weight: var(--body-md-regular-font-weight);
                 color: var(--text-body);
               }
 
+              .programlisting {
+                margin: 0.5rem 0;
+              }
+
               .example-contents {
                 display: flex;
                 flex-direction: column;
                 gap: 0.5rem;
-
-                .programlisting {
-                  margin: 0.5rem 0;
-                }
               }
             }
             
