--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,5 +1,13 @@
 :root {
   --header-height: 3rem;
+  --navbar-toggle-display: none;
+  --navbar-header-width: auto;
+}
+@media (max-width: 768px) {
+  :root {
+    --navbar-toggle-display: block;
+    --navbar-header-width: 100%;
+  }
 }
 
 .site-header {
@@ -31,9 +39,12 @@
   float: none;
   display: flex;
   align-items: center;
+  width: var(--navbar-header-width);
 }
-.navbar-toggle {
-  display: none;
+button.navbar-toggle {
+  display: var(--navbar-toggle-display);
+  order: 1;
+  margin-left: auto;
 }
 
 .site-header-navbar .navbar-container .logotype-container {
