--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -1,19 +1,29 @@
 :root {
   --sidebar-width: 320px;
+  --sidebar-mobile-width: 0px;
   --sidebar-display: block;
 }
 @media (max-width: 768px) {
   :root {
-    --sidebar-width: 0;
+    --sidebar-width: 0px;
+    --sidebar-mobile-width: 320px;
     --sidebar-display: none;
   }
 }
 
 .site-body .site-sidebar {
-  width: var(--sidebar-width);
+  width: calc(var(--sidebar-width) + var(--sidebar-mobile-width));
   float: none;
   height: 100vh !important;
-  display: var(--sidebar-display);
+  display: block;
+  position: fixed;
+  left: calc(-1 * var(--sidebar-mobile-width));
+  top: 0;
+  transition: left 0.3s ease-in-out;
+
+  &.in {
+    left: 0;
+  }
 
   & .site-sidebar-header {
     height: var(--header-height);
