navbar search and pagination

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -40,6 +40,7 @@
   display: flex;
   align-items: center;
   width: var(--navbar-header-width);
+  min-width: 360px;
 }
 button.navbar-toggle {
   display: var(--navbar-toggle-display);
@@ -114,4 +115,95 @@ ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link:hover {
 }
 ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link:focus {
   box-shadow: 0px 0px 0px 2px var(--sys-interactive-highlight);
+}
+
+.site-header-navbar {
+  .navbar-container {
+    .navbar-search {
+      width: 100%;
+      margin-left: auto;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      padding: 0.75rem 0.5rem;
+      background-color: rgba(255, 255, 255, 0.10);
+      height: 2rem;
+      border-radius: 0.25rem;
+      position: relative;
+      margin-right: calc(1rem + 1px);
+
+      input {
+        border: 0;
+        background: transparent;
+        color: var(--text-on-contrast);
+        width: 100%;
+        font-size: var(--body-md-regular-font-size);
+        line-height: var(--body-md-regular-line-height);
+        font-weight: var(--body-md-regular-font-weight);
+
+        &::placeholder {
+          color: var(--text-on-contrast);
+        }
+      }
+
+      &::before {
+        content: "";
+        display: block;
+        background-color: var(--icon-on-contrast);
+        mask-image: url("../images/icon-magnifier-24px.svg");
+        width: 1.5rem;
+        height: 1.5rem;
+      }
+
+      &::after {
+        content: "";
+        display: block;
+        opacity: .5;
+        width: 1px;
+        background-color: var(--background-primary);
+        height: 1.5rem;
+        position: absolute;
+        right: calc(-1rem - 1px);
+      }
+    }
+    .navbar-search + div#navbar.navbar-collapse {
+      margin-left: 0.5rem;
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  .site-header-navbar {
+    .navbar-container {
+      .navbar-header {
+        min-width: auto;
+      }
+      .navbar-search {
+        background: transparent;
+        width: 2rem;
+        padding: 0;
+        justify-content: center;
+
+        input {
+          display: none;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .site-header-navbar {
+    .navbar-container {
+      .navbar-search {
+        margin: 0;
+        right: 4.5rem;
+        position: absolute;
+
+        &::after {
+          display: none;
+        }
+      }
+    }
+  }
 }
