--- a/src/css/global.css
+++ b/src/css/global.css
@@ -48,7 +48,77 @@
   height: calc(100vh - var(--header-height));
   
   #bottom-pager {
-    display: none;
+    width: 100%;
+    padding: 0 var(--content-padding) 1.5rem var(--content-padding);
+
+    ul.pager {
+      margin: 0;
+      padding: 0;
+      max-width: var(--content-max-width);
+      margin-right: calc(var(--page-max-width) - var(--sidebar-width) - var(--content-max-width) - (var(--content-padding) * 2) - var(--content-overview-gap));
+      float: none;
+      display: flex;
+      width: auto;
+
+      li > a {
+        padding: var(--button-md-padding);
+        background-color: var(--button-tertiary-bg);
+        font-size: var(--button-md-font-size);
+        line-height: var(--button-md-line-height);
+        font-weight: var(--button-md-font-weight);
+        color: var(--button-tertiary-fg);
+        text-decoration: none;
+        display: inline-flex !important;
+        align-items: center;
+        justify-content: center;
+        border-radius: 0.25rem;
+        gap: 0.25rem;
+        float: none !important;
+
+        &::before {
+          content: '';
+          display: inline-block;
+          width: 1rem;
+          height: 1rem;
+          background-color: var(--icon-interactive);
+          mask-size: cover;
+          mask-repeat: no-repeat;
+        }
+
+        &:hover {
+          background-color: var(--button-tertiary-bg-hover);
+          color: var(--button-tertiary-fg-hover);
+
+          &::before {
+            background-color: var(--button-tertiary-fg-hover);
+          }
+        }
+        &:active {
+          background-color: var(--button-tertiary-bg-active);
+          color: var(--button-tertiary-fg-active);
+
+          &::before {
+            background-color: var(--button-tertiary-fg-active);
+          }
+        }
+      }
+
+      li.next {
+        margin-left: auto;
+        & > a {
+          flex-direction: row-reverse;
+        }
+        & > a::before {
+          mask-image: url('../images/icon-arrow-right-16px.svg');
+        }
+      }
+
+      li.previous {
+        & > a::before {
+          mask-image: url('../images/icon-arrow-left-16px.svg');
+        }
+      }
+    }
   }
 
   .toolbar {
