[skip publish] gen ai search and language selector

--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -193,7 +193,7 @@
         }
 
         /* Icons for Bitrias as a Platform subpages */
-        &[data-permalink="bitrise-platform/the-bitrise-platform.html"]::before {
+        &[data-permalink="bitrise-platform/mobile-devops-platform.html"]::before {
           mask-image: url("../images/icon-cycle-16px.svg");
         }
         &[data-permalink="bitrise-platform/getting-started-with-the-platform.html"]::before {
@@ -213,6 +213,9 @@
         }
         &[data-permalink="bitrise-platform/connectivity.html"]::before {
           mask-image: url("../images/icon-arrows-horizontal-16px.svg");
+        }
+        &[data-permalink="bitrise-platform/infrastructure.html"]::before {
+          mask-image: url("../images/icon-cpu-16px.svg");
         }
 
         /* Icons for Bitrias CI subpages */
