--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -415,12 +415,17 @@
 
   --elevation-sm: 0px 2px 4px 0px rgba(0, 0, 0, 0.06);
   --elevation-md: 0px 2px 12px 0px rgba(0, 0, 0, 0.06);
+  --elevation-lg: 0px 2px 24px 0px rgba(0, 0, 0, 0.08);
 
   /* -------- Typography -------- */
 
   --body-md-regular-font-size: 0.875rem; /* 14px */
   --body-md-regular-line-height: 1.25rem; /* 20px */
   --body-md-regular-font-weight: 400;
+
+  --body-md-semibold-font-size: 0.875rem; /* 14px */
+  --body-md-semibold-line-height: 1.25rem; /* 20px */
+  --body-md-semibold-font-weight: 600;
 
   --body-lg-regular-font-size: 1rem; /* 16px */
   --body-lg-regular-line-height: 1.5rem; /* 24px */
@@ -469,4 +474,18 @@
   --button-md-line-height: 1.25rem; /* 20px */
   --button-md-font-weight: 600;
   --button-md-padding: .5rem .75rem; /* 8px 12px */
+
+  --dropdown-lg-item-padding: 0.75rem 1.5rem 0.75rem 1rem; /* 12px 16px */
+  --dropdown-lg-item-font-size: var(--body-lg-regular-font-size);
+  --dropdown-lg-item-line-height: var(--body-lg-regular-line-height);
+  --dropdown-lg-item-font-weight: var(--body-lg-regular-font-weight);
+  --dropdown-lg-item-selected-font-weight: var(--body-lg-semibold-font-weight);
+  --dropdown-lg-icon-size: 1.5rem;
+
+  --dropdown-md-item-padding: 0.5rem 1.5rem 0.5rem 1rem; /* 8px 16px */
+  --dropdown-md-item-font-size: var(--body-md-regular-font-size);
+  --dropdown-md-item-line-height: var(--body-md-regular-line-height);
+  --dropdown-md-item-font-weight: var(--body-md-regular-font-weight);
+  --dropdown-md-item-selected-font-weight: var(--body-md-semibold-font-weight);
+  --dropdown-md-icon-size: 1rem;
 }
