--- a/src/css/header.css
+++ b/src/css/header.css
@@ -163,11 +163,160 @@ ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link:focus {
         background-color: var(--background-primary);
         height: 1.5rem;
         position: absolute;
-        right: calc(-1rem - 1px);
+        right: calc(-1rem + -2px);
       }
     }
-    .navbar-search + div#navbar.navbar-collapse {
-      margin-left: 0.5rem;
+    div#navbar.navbar-collapse {
+      display: flex !important;
+      align-items: center;
+
+      .top-nav-menu {
+        order: 1;
+      }
+      .adv-search {
+        display: none;
+      }
+      .dropdown-container {
+        order: 2;
+        padding: 0;
+        margin: 0;
+        position: relative;
+
+        & > span {
+          height: var(--header-height);
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 0.5rem;
+          padding: 0 0 0 0.25rem;
+          text-transform: uppercase;
+          font-size: var(--button-sm-font-size);
+          line-height: var(--button-sm-line-height);
+          font-weight: var(--button-sm-font-weight);
+          color: var(--button-primary-fg);
+
+          &::after {
+            content: "";
+            margin: 0;
+            position: static;
+            mask-image: url("../images/icon-chevron-down-16px.svg");
+            mask-size: cover;
+            width: 1rem;
+            height: 1rem;
+            transform: none;
+            background-color: var(--button-primary-fg);
+          }
+        }
+
+        ul.dropdown-content {
+          position: absolute;
+          right: 0;
+          top: calc(var(--header-height) + 0.5rem);
+          display: none;
+          list-style: none;
+          margin: 0;
+          padding: 0.5rem 0;
+          border-radius: 4px;
+          border: 1px solid var(--border-minimal);
+          background: var(--background-primary);
+          box-shadow: var(--elevation-lg);
+          transform: none;
+          min-width: 0;
+          z-index: 9999;
+
+          &.show {
+            display: flex !important;
+            flex-direction: column;
+          }
+
+          li {
+            margin: 0;
+            padding: 0;
+
+            a {
+              display: flex;
+              gap: 0.75rem;
+              align-items: center;
+              padding: var(--dropdown-md-item-padding);
+              background: transparent;
+              font-size: var(--dropdown-md-item-font-size);
+              line-height: var(--dropdown-md-item-line-height);
+              font-weight: var(--dropdown-md-item-font-weight);
+              color: var(--text-body);
+              text-decoration: none;
+              white-space: nowrap;
+              text-align: left;
+
+              &:hover {
+                background: var(--background-hover);
+              }
+              &:active {
+                background: var(--background-active);
+                color: var(--text-primary);
+              }
+
+              &::after {
+                content: "";
+                position: static;;
+                display: block;
+                mask-image: url("../images/icon-check-16px.svg");
+                mask-size: cover;
+                width: var(--dropdown-md-icon-size);
+                height: var(--dropdown-md-icon-size);
+                transform: none;
+                margin-left: auto;
+                background-color: transparent;
+              }
+            }
+
+            &.active-lang {
+              a {
+                background: var(--background-selected);
+                color: var(--text-primary);
+                font-weight: var(--dropdown-md-item-selected-font-weight);
+
+                &::after {
+                  background-color: var(--icon-interactive);
+                }
+
+                &:hover {
+                  background: var(--background-selected-hover);
+
+                  &::after {
+                    background-color: var(--icon-interactive-hover);
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+      .darktoggle {
+        order: 3;
+        width: var(--header-height);
+        height: var(--header-height);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0.75rem;
+        margin: 0 0 0 0.5rem;
+
+        display: none;
+
+        &::before {
+          content: "";
+          position: static;
+          display: block;
+          background-color: var(--button-primary-fg);
+          mask-image: url("../images/icon-theme-dark-toggle-24px.svg");
+          mask-size: cover;
+          mask-repeat: no-repeat;
+          width: 1.5rem;
+          height: 1.5rem;
+          filter: none;
+          transform: none;
+        }
+      }
     }
   }
 }
