[skip publish] design and search adjustments

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -47,6 +47,14 @@
   flex-direction: column;
   height: calc(100vh - var(--header-height));
   
+  &:not(.no-overview) {
+    main article#content-wrapper div#topic-content > section,
+    main article#content-wrapper div#topic-content > .footer-content,
+    #bottom-pager ul.pager {
+      margin-right: calc(var(--page-max-width) - var(--sidebar-width) - var(--content-max-width) - (var(--content-padding) * 2) - var(--content-overview-gap));
+    }
+  }
+
   #bottom-pager {
     width: 100%;
     padding: 0 var(--content-padding) 1.5rem var(--content-padding);
@@ -55,7 +63,6 @@
       margin: 0;
       padding: 0;
       max-width: var(--content-max-width);
-      margin-right: calc(var(--page-max-width) - var(--sidebar-width) - var(--content-max-width) - (var(--content-padding) * 2) - var(--content-overview-gap));
       float: none;
       display: flex;
       width: auto;
@@ -140,11 +147,13 @@
       min-width: calc(var(--page-max-width) - var(--sidebar-width) - var(--content-max-width) - (var(--content-padding) * 2) - var(--content-overview-gap));
       width: calc(100% - var(--sidebar-width) - var(--content-max-width) - (var(--content-padding) * 2));
       padding: 0 2rem 0 0;
-      top: calc(var(--header-height) + 4.5rem);
+      top: 3rem;
+      margin-top: calc(var(--header-height) + 1.5rem);
       right: 0;
       position: fixed;
       z-index: 1;
       display: var(--display-overview);
+      background: var(--background-primary);
 
       &::before {
         content: 'On this page';
@@ -318,7 +327,6 @@
           & > section,
           & > .footer-content {
             max-width: var(--content-max-width);
-            margin-right: calc(var(--page-max-width) - var(--sidebar-width) - var(--content-max-width) - (var(--content-padding) * 2) - var(--content-overview-gap));
           }
 
           & > .footer-content {
@@ -364,8 +372,6 @@
           }
 
           & > section {
-            max-width: var(--content-max-width);
-            margin-right: calc(var(--page-max-width) - var(--sidebar-width) - var(--content-max-width) - (var(--content-padding) * 2) - var(--content-overview-gap));
             padding: 1.5rem 0 0 0;
 
             p {
