--- a/src/css/header.css
+++ b/src/css/header.css
@@ -2,10 +2,11 @@
   --header-height: 3rem;
   --navbar-toggle-display: none;
   --navbar-header-width: auto;
+  --navbar-padding: 1.5rem;
 }
 @media (max-width: 768px) {
   :root {
-    --navbar-toggle-display: block;
+    --navbar-toggle-display: flex;
     --navbar-header-width: 100%;
   }
 }
@@ -24,7 +25,7 @@
 }
 
 .site-header-navbar .navbar-container {
-  padding: 0 1.25rem;
+  padding: 0 var(--navbar-padding);
   display: flex;
   align-items: center;
   height: 100%;
@@ -46,6 +47,12 @@ button.navbar-toggle {
   display: var(--navbar-toggle-display);
   order: 1;
   margin-left: auto;
+  /* background: #0f0; */
+  width: var(--header-height);
+  height: var(--header-height);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .site-header-navbar .navbar-container .logotype-container {
@@ -140,6 +147,7 @@ ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link:focus {
         font-size: var(--body-md-regular-font-size);
         line-height: var(--body-md-regular-line-height);
         font-weight: var(--body-md-regular-font-weight);
+        pointer-events: none;
 
         &::placeholder {
           color: var(--text-on-contrast);
@@ -166,7 +174,9 @@ ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link:focus {
         right: calc(-1rem + -2px);
       }
     }
+
     div#navbar.navbar-collapse {
+      padding: 0;
       display: flex !important;
       align-items: center;
 
@@ -181,6 +191,8 @@ ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link:focus {
         padding: 0;
         margin: 0;
         position: relative;
+        height: auto;
+        letter-spacing: 0;
 
         & > span {
           height: var(--header-height);
@@ -318,6 +330,10 @@ ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link:focus {
         }
       }
     }
+
+    .navbar-search + div#navbar.navbar-collapse {
+      margin-left: 0.5rem;
+    }
   }
 }
 
@@ -346,11 +362,30 @@ ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link:focus {
     .navbar-container {
       .navbar-search {
         margin: 0;
-        right: 4.5rem;
+        right: calc(var(--navbar-padding) + var(--header-height));
+        width: var(--header-height);
+        height: var(--header-height);
         position: absolute;
+        /* background: #f00; */
 
         &::after {
           display: none;
+        }
+      }
+
+      div#navbar.navbar-collapse.collapse {
+        width: 0;
+        margin: 0;
+
+        .top-nav-menu {
+          display: none;
+        }
+
+        .dropdown-container {
+          /* background: #00f; */
+          position: absolute;
+          right: calc(var(--navbar-padding) + var(--header-height) + var(--header-height));
+          padding: 0 0.5rem;
         }
       }
     }
