--- a/src/css/portal.css
+++ b/src/css/portal.css
@@ -16,6 +16,13 @@ body[data-subpage="portal"] {
     background-color: var(--background-secondary);
   }
 
+  & .site-sidebar {
+    display: none;
+  }
+  & .site-content {
+    display: none;
+  }
+
   & .site-footer {
     margin-top: auto;
     display: block;
