[skip publish] design fixes

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -155,6 +155,10 @@
       display: var(--display-overview);
       background: var(--background-primary);
 
+      .side-cta {
+        max-width: 256px;
+      }
+
       &::before {
         content: 'On this page';
         padding-bottom: 0.5rem;
@@ -461,6 +465,10 @@
 
             .mediaobject {
               margin: 1rem 0;
+
+              table {
+                width: 100% !important;
+              }
 
               img.materialboxed {
                 max-width: 100%;
