--- a/src/css/header.css
+++ b/src/css/header.css
@@ -332,7 +332,7 @@ ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link:focus {
     }
 
     .navbar-search + div#navbar.navbar-collapse {
-      margin-left: 0.5rem;
+      margin-left: 0;
     }
   }
 }
