--- a/src/css/header.css
+++ b/src/css/header.css
@@ -60,10 +60,27 @@ button.navbar-toggle {
 } 
 .site-header-navbar .navbar-container .navbar-brand {
   float: none;
+  background: url("../images/bitrise-logo.svg") no-repeat center left;
+  padding: 0 0 0 85px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+
+  &::after {
+    content: "Docs";
+    margin-left: 0.25rem;
+    font-size: var(--body-lg-semibold-font-size);
+    line-height: var(--body-lg-semibold-line-height);
+    font-weight: var(--body-lg-semibold-font-weight);
+    color: var(--text-on-color);
+    opacity: 0.8;
+    padding-top: 0.25rem;
+  }
 }
 .site-header-navbar .navbar-container .navbar-brand img {
   float: none;
-  height: 24px;;
+  height: 24px;
+  display: none;
 }
 
 div#navbar.navbar-collapse.collapse,
