[skip publish] fix hub page margin

--- a/src/css/hub.css
+++ b/src/css/hub.css
@@ -15,11 +15,15 @@
 
 .site-content,
 .fixed-toolbar .site-content {
-  &[data-is-hub="true"] {
+  &[data-is-hub="true"]:not(.no-overview) {
     #bottom-pager,
     .footer-content,
     .breadcrumb-container {
       display: none;
+    }
+
+    main {
+      margin-right: var(--content-margin-left);
     }
   
     main article#content-wrapper {
@@ -38,6 +42,7 @@
         flex-wrap: wrap;
         flex-direction: row;
         gap: 1.5rem;
+        margin-right: 0;
 
         div.itemizedlist.index-container {
           display: flex;
