[skip publish] fix hub page top margin

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -257,7 +257,7 @@
 
         &.topic {
           display: block;
-          padding: 1.5rem var(--content-padding) 3rem var(--content-padding) !important;
+          padding: 1.5rem var(--content-padding) 3rem var(--content-padding);
           width: 100%;
         }
         
