[skip publish] table, glossary popover

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -416,6 +416,7 @@
   --elevation-sm: 0px 2px 4px 0px rgba(0, 0, 0, 0.06);
   --elevation-md: 0px 2px 12px 0px rgba(0, 0, 0, 0.06);
   --elevation-lg: 0px 2px 24px 0px rgba(0, 0, 0, 0.08);
+  --popover-elevation: 0px 0px 12px 0px rgba(0, 0, 0, 0.16);
 
   /* -------- Typography -------- */
 
