--- a/src/css/global.css
+++ b/src/css/global.css
@@ -452,6 +452,11 @@
                 color: var(--text-link-hover);
                 text-decoration: underline;
               }
+
+              &.glossterm {
+                font-weight: var(--body-md-semibold-font-weight) !important;
+                color: var(--sys-turquoise-bold) !important
+              }
             }
 
             code {
@@ -478,7 +483,6 @@
                 padding: 0;
 
                 .warning, .note, .notice, .important, .caution, .tip, .example,
-                .programlisting,
                 ul, ol {
                   margin-top: 0.5rem;
                 }
@@ -497,10 +501,6 @@
                 height: auto;
                 box-shadow: var(--elevation-md);
               }
-            }
-
-            div.table {
-              margin: 0;
             }
 
             ul.procedure, ol.procedure {
@@ -663,7 +663,7 @@
               --gutter-icon-width: 1.5rem;
               --gutter-width: calc(var(--gutter-padding-x) + var(--gutter-icon-width) + var(--gutter-padding-x));
 
-              margin: 0;
+              margin: 0.5rem 0;
               overflow: hidden;
               border: 1px solid var(--border-regular);
               background: var(--background-primary);
@@ -712,6 +712,7 @@
                 line-height: var(--body-md-regular-line-height);
                 font-weight: var(--body-md-regular-font-weight);
                 color: var(--text-body);
+                padding: 0;
               }
 
               .programlisting {
@@ -721,8 +722,7 @@
               .example-contents {
                 display: flex;
                 flex-direction: column;
-                gap: 0.5rem;
-              }
+                }
             }
             
             .warning {
@@ -824,11 +824,114 @@
                 }
               }
             }
+
+            .table.table-responsive {
+              width: 100%;
+              max-width: 100%;
+              margin: 0.5rem 0;
+
+              .table-title {
+                font-size: var(--body-md-semibold-font-size);
+                line-height: var(--body-md-semibold-line-height);
+                font-weight: var(--body-md-semibold-font-weight);
+                color: var(--text-body);
+                margin-bottom: 0.5rem;
+              }
+
+              .table.table-responsive-contents {
+                width: 100%;
+                max-width: 100%;
+                overflow: auto;
+
+                &:has(table.table-bordered) {
+                  border-radius: 0.25rem;
+                  border: 1px solid var(--border-minimal);
+                }
+
+                table.table {
+                  margin: 0;
+                  width: 100%;
+                  max-width: 100%;
+                  border: 0;
+                  border-collapse: collapse;
+                  border-spacing: 0;
+                  border-radius: 0.25rem;
+                  
+                  & > tbody,
+                  & > tfoot,
+                  & > thead {
+                    & > tr {
+                      td, th {
+                        padding: 0.5rem;
+                        vertical-align: top;
+
+                        p {
+                          margin: 0;
+                          font-size: var(--body-md-regular-font-size);
+                          line-height: var(--body-md-regular-line-height);
+                          font-weight: var(--body-md-regular-font-weight);
+                          color: var(--text-body);
+
+                          a {
+                            font-weight: var(--body-md-regular-font-weight);
+                          }
+                        }
+                      }
+                    }
+                  }
+
+                  & > thead {
+                    background-color: transparent;
+                    &  > tr > th {
+                      background-color: var(--background-secondary);
+                      p {
+                        font-size: var(--heading-h5-font-size);
+                        line-height: var(--heading-h5-line-height);
+                        font-weight: var(--heading-h5-font-weight);
+                        color: var(--text-primary);
+                        text-align: left;
+                      }
+                    }
+                  }
+
+                  &.table-bordered {
+                    border: 0;
+
+                    & > tbody,
+                    & > tfoot,
+                    & > thead {
+                      & > tr {
+                        td, th {
+                          border-right: 0;
+                          border-bottom: 0;
+                          border-top: 1px solid var(--border-minimal);
+                          border-left: 1px solid var(--border-minimal);
+                        }
+                        td:first-child,
+                        th:first-child {
+                          border-left: 0;
+                        }
+                      }
+                    }
+
+                    & > caption + thead > tr:first-child,
+                    & > colgroup + thead > tr:first-child,
+                    & > thead:first-child > tr:first-child {
+                      td, th {
+                        border-top: 0;
+                      }
+                    }
+                  }
+                }
+              }
+            }
           }
         }
       }
     }
   }
 }
+
+@import './popover.css';
 
 @import './hub.css';
