--- a/src/css/global.css
+++ b/src/css/global.css
@@ -352,26 +352,39 @@
           & > .footer-content {
             margin-top: 1rem;
             padding: 1rem 0 0 0;
-            border-top: 1px solid var(--border-regular);
 
+            .section-toc + .relationship-toc {
+              margin-top: 3rem;
+            }
+
+            .section-toc,
             .relationship-toc {
               display: flex;
               flex-direction: column;
+              border-top: 1px solid var(--border-regular);
+              padding-top: 1rem; 
               gap: 1rem;
 
+              .section-toc-title,
               .relationship-toc-title {
                 font-size: var(--heading-h3-font-size);
                 line-height: var(--heading-h3-line-height);
                 font-weight: var(--heading-h3-font-weight);
                 color: var(--text-primary);
                 margin: 0;
+                padding: 0;
+                border: 0;
+
+                &::before {
+                  display: none;
+                }
               }
 
-              ul.related-topics {
+              & > ul {
                 list-style: none;
                 margin: 0;
                 padding: 0;
-                display: flex;
+                display: flex !important;
                 flex-direction: column;
                 gap: 1rem;
 
@@ -381,6 +394,7 @@
                   font-weight: var(--body-md-regular-font-weight);
                   color: var(--text-link);
                   text-decoration: none;
+                  padding: 0;
 
                   &:hover {
                     color: var(--text-link-hover);
