--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -163,6 +163,10 @@
           color: var(--text-primary);
           font-weight: 600;
           border-right: 2px solid var(--border-selected);
+          
+          & .glyphicon {
+            right: calc(1.25rem - 2px);
+          }
 
           &:hover {
             background-color: var(--background-selected-hover);
