[skip publish] header links

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -68,6 +68,47 @@
     }
   }
 
+  .header-link {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 1;
+    width: 1.5rem;
+    height: 1.5rem;
+    margin-left: 0.5rem;
+    transform: translateY(0.25rem);
+
+    i.fa.fa-link {
+      display: inline-block;
+      width: 1.5rem;
+      height: 1.5rem;
+    }
+
+    i.fa.fa-link::before {
+      content: '';
+      display: inline-block;
+      width: 1.5rem;
+      height: 1.5rem;
+      background-color: var(--icon-interactive);
+      mask-image: url('../images/icon-link-24px.svg');
+      mask-size: cover;
+      mask-position: center;
+      mask-repeat: no-repeat;
+      position: relative;
+      transform: none;
+    }
+
+    &:hover i.fa.fa-link::before {
+      background-color: var(--icon-interactive-hover);
+    }
+  }
+
+  h4, h5, h6 {
+    .header-link {
+      display: none;
+    }
+  }
+
   #bottom-pager {
     margin-left: var(--content-margin-left);
 
@@ -718,6 +759,10 @@
                 line-height: var(--body-lg-semibold-line-height);
                 font-weight: var(--body-lg-semibold-font-weight);
                 color: var(--text-primary);
+
+                .header-link {
+                  display: none;
+                }
               }
 
               p {
