--- a/src/css/portal.css
+++ b/src/css/portal.css
@@ -120,6 +120,7 @@ body[data-subpage="portal"] {
     font-weight: var(--body-md-regular-font-weight);
     width: 100%;
     color: var(--input-text-input-value);
+    background: transparent;
   }
 
   & .portal-header .portal-header-top .portal-header-top-inner .portal-search input::placeholder {
