--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -71,7 +71,9 @@
         display: inline-flex;
         align-items: center;
         gap: 0.25rem;
+        padding: 0;
         color: var(--text-link);
+        height: 1.5rem;
 
         &::before {
           content: "";
@@ -196,11 +198,11 @@
           background-color: var(--icon-secondary);
         }
 
-        /* Icons for Bitrias as a Platform subpages */
+        /* Icons for Bitrise as a Platform subpages */
         &[data-permalink="bitrise-platform/mobile-devops-platform.html"]::before {
           mask-image: url("../images/icon-cycle-16px.svg");
         }
-        &[data-permalink="bitrise-platform/getting-started-with-the-platform.html"]::before {
+        &[data-permalink="bitrise-platform/getting-started.html"]::before {
           mask-image: url("../images/icon-power-16px.svg");
         }
         &[data-permalink="bitrise-platform/accounts.html"]::before {
