[skip publish] fix issues with Japanese pages

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -210,6 +210,7 @@ ul.top-nav-menu.sm.sm-simple > li:nth-child(2) > .external-top-nav-link:focus {
         position: relative;
         height: auto;
         letter-spacing: 0;
+        white-space: nowrap;
 
         & > span {
           height: var(--header-height);
