glossary term in inline code

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -559,7 +559,8 @@
 
               &.glossterm {
                 font-weight: var(--body-md-semibold-font-weight) !important;
-                color: var(--sys-turquoise-bold) !important
+                color: var(--sys-turquoise-bold) !important;
+                font-family: inherit !important;
               }
             }
 
