[skip publish] add divider above pager

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -112,9 +112,10 @@
     margin-left: var(--content-margin-left);
 
     ul.pager {
-      margin: 0;
-      padding: 0 var(--content-padding) 1.5rem var(--content-padding);
+      padding: 1rem 0 1.5rem 0;
+      margin: 0 var(--content-padding) 0 var(--content-padding);
       max-width: calc(var(--content-max-width) + var(--content-padding) * 2);
+      border-top: 1px solid var(--border-minimal);
       float: none;
       display: flex;
       width: auto;
